compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-1/pos/1.1.kt
/*
 * KOTLIN PSI SPEC TEST (POSITIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 1 -> sentence 1
 * NUMBER: 1
 * DESCRIPTION: Simple real literals with a different whole-number part and fraction part.
 */

konst konstue = 0.0
konst konstue = 0.00
konst konstue = 0.000
konst konstue = 0.0000

konst konstue = 00.0
konst konstue = 000.00
konst konstue = 0000.000

konst konstue = 1.0
konst konstue = 22.00
konst konstue = 333.000
konst konstue = 4444.0000
konst konstue = 55555.0
konst konstue = 666666.00
konst konstue = 7777777.000
konst konstue = 88888888.0000
konst konstue = 999999999.0

konst konstue = 0000000000.1234567890
konst konstue = 123456789.23456789
konst konstue = 2345678.345678
konst konstue = 34567.4567
konst konstue = 456.56
konst konstue = 5.65
konst konstue = 654.7654
konst konstue = 76543.876543
konst konstue = 8765432.98765432
konst konstue = 987654321.0987654321

konst konstue = 0.1111
konst konstue = 1.22222
konst konstue = 9.33333
konst konstue = 9.444444
konst konstue = 8.5555555
konst konstue = 2.66666666
konst konstue = 3.777777777
konst konstue = 7.8888888888
konst konstue = 6.99999999999
