compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-1/neg/1.1.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 1 -> sentence 1
 * NUMBER: 1
 * DESCRIPTION: Real literals with not allowed several dots.
 */

konst konstue = 0..
konst konstue = 000..
konst konstue = 0.0.
konst konstue = 00.0.
konst konstue = 000.00.
konst konstue = 0000.1.

konst konstue = 0....
konst konstue = 1.1..
konst konstue = 2.2.3
konst konstue = 3.0.0.0.0.0.0
konst konstue = 4.00000.
konst konstue = 5.1.2.3.4.5.6.
konst konstue = 6..1..2...3..4..5
konst konstue = 7.8..9...0....1
konst konstue = 8.

konst konstue = 1......................................................................................................
konst konstue = 2....2.
konst konstue = 333............3
konst konstue = 4444..........4
konst konstue = 55555.......................................................................................................55555
konst konstue = 666666..............................................0.........................................................
konst konstue = 7777777.............................................0.........................................................
konst konstue = 88888888.9...0
konst konstue = 999999999.0..2.

konst konstue = 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000........
konst konstue = 99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.0.
konst konstue = 222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222...0.1
konst konstue = 555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555123456785012345678501234567850123456785012345678501234567850.0.1

konst konstue = .0....
konst konstue = .1.1..
konst konstue = .2.2..3
konst konstue = .3.0.0.0.0.0.0
konst konstue = .4.00000.
konst konstue = .5.1.2.3.4.5.6.
konst konstue = .6..1..2.3.4..5
konst konstue = .7.8..9...0....1
konst konstue = .8.
